bch_software_impl.sdk/.metadata/.plugins/org.eclipse.cdt.ui/x_bch.build.log
15:34:20 **** Incremental Build of configuration Debug for project x_bch ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/BinaryMatrix.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/BinaryMatrix.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/BinaryMatrix.d" -MT"src/BinaryMatrix.o" -o "src/BinaryMatrix.o" "../src/BinaryMatrix.cpp"
In file included from ../src/BinaryMatrix.h:6:0,
                 from ../src/BinaryMatrix.cpp:1:
../src/ecclib.h:100:30: error: ISO C++ forbids in-class initialization of non-const static member 'EccLib::BCH::Done'
   volatile static int Done = 0; /* Dma transfer is done */
                              ^
../src/ecclib.h:101:31: error: ISO C++ forbids in-class initialization of non-const static member 'EccLib::BCH::Error'
   volatile static int Error = 0; /* Dma Bus Error occurs */
                               ^
make: *** [src/BinaryMatrix.o] Error 1

15:34:23 Build Finished (took 2s.964ms)

